# goit-pythonweb-hw-01

./: README.md  factory_pattern.py  pyproject.toml  solid_design.py
