[project]
name = "goit-pythonweb-hw-01"
version = "0.1.0"
description = ""
authors = [
    { name = "ostafiichuko", email = "issimo333@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black (>=25.1.0,<26.0.0)",
    "logging (>=0.4.9.6,<0.5.0.0)",
    "colorama (>=0.4.6,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
